[package]
name = "sarif-to-md"
version = "0.1.0"
edition = "2021"
authors = ["Nelson Silva <nelson.emanuel.silva@gmail.com>"]
description = "A CLI to convert SARIF security reports into Markdown format."
license = "MIT OR Apache-2.0"
repository = "https://github.com/fulgas/sarif-to-md-rs"
keywords = ["sarif", "markdown", "vulnerability", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.90"

[[bin]]
name = "sarif-to-md"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
sarif-to-md-core = { path = "../sarif-to-md-core" }
